--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
-<body style="background-color: #00b359;">
+<body>
     <div class="redcow">
         <form action="">
             <label id="box" for="search">Search for cow
@@ -23,14 +23,14 @@
             <a href="https://www.pexels.com/search/cow/" target="_blank"><small>For more click here</small></a>
         </p><hr>
         <div>
-            <form action="">
-                <label for="">Your name: <input type="text" name="name" id="fullname"></label><br><br>
-                <label for="">Email: <input type="email" placeholder="abc@gmail.com" name="email" id="email"></label><br><br>
+            <form class="info-form">
+                <label for="">Your name: <input type="text" name="name" id="fullname" required></label><br><br>
+                <label for="">Email: <input type="email" placeholder="user@gmail.com" name="email" id="email" required></label><br><br>
                 <label for="">
                     <legend>Comment:</legend>
                     <textarea name="" id="" cols="30" rows="3"></textarea>
                 </label><br>
-                <input type="submit" value="Submit">
+                <input class="submit" type="submit" value="Submit" required>
             </form>
         </div>
     </div>
